<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- APPLICATION -->
    <string name="app_name">Go4Lunch</string>

    <!-- MAIN ACTIVITY -->
    <string name="search">Search</string>
    <string name="no_lunch_chosen">You did not choose your lunch yet.</string>
    <string name="no_restaurant_found">There are no restaurant in this area.</string>

    <!-- LOGIN ACTIVITY -->
    <string name="auth_subtitle">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="error_not_connected">You need to be authentified !</string>
    <string name="error_authentication_canceled">Authentification canceled&#8230;</string>
    <string name="error_no_internet">No internet!</string>
    <string name="error_unknown_error">An error has happened&#8230;</string>
    <string name="connection_succeed">Authentification successed !</string>
    <string name="auth_loggout">You have been disconnected</string>
    <string name="auth_imv_content_desc">Null</string>


    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">280804142565240</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb280804142565240</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_profile">PROFILE</string>
    <string name="drawer_your_lunch">YOUR LUNCH</string>
    <string name="drawer_message">MESSAGE</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="drawer_no_email_found">No email found</string>
    <string name="drawer_no_username_found">No Username found</string>

    <!-- TOOLBAR -->
    <string name="toolbar_title_hungry">I\'m Hungry !</string>
    <string name="toolbar_title_workmates">Availables Workmates</string>
    <string name="toolbar_search_query_hint">Search Restaurants</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_message">Chat</string>
    <string name="toolbar_title_profile">Profile</string>

    <!-- BOTTOM NAVIGATION -->
    <string name="bottom_nav_map_view">Map View</string>
    <string name="bottom_nav_list_view">List View</string>
    <string name="bottom_nav_workmates">Wormates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <!-- WORKMATES LIST VIEW-->
    <string name="workmates_is_eating">" is eating at "</string>
    <string name="workmates_not_decided">" has not decided yet."</string>
    <string name="workmates_fragment_no_workmates">No Workmates registered</string>

    <!-- RESTAURANT LIST VIEW-->
    <string name="restaurant_open">Open Now</string>
    <string name="restaurant_close">Closed Now</string>
    <string name="restaurant_no_opening_info">No Opening information</string>

    <!-- SETTING/PROFILE ACTIVITY-->
    <string name="profile">Profile</string>
    <string name="switch_notification">Enable notification</string>
    <string name="settings_language">Language :</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_english">English</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_answer_yes">Yes !</string>
    <string name="popup_message_answer_no">No</string>
    <string name="info_no_username_found">No Username</string>
    <string name="username_updated">Your username has been updated.</string>
    <string name="dialog_message">"Changing language require application reboot. Are you sure you want to change language ?"</string>
    <string name="dialog_btn_yes">"YES"</string>
    <string name="dialog_btn_no">"NO"</string>
    <string name="notification_on">Notification scheduled.</string>
    <string name="notification_canceled">Notification cancelled.</string>
    <string name="notification_lunch">"Your Lunch : "</string>
    <string name="notification_no_workmates">"No workmates are joining you on this restaurant."</string>
    <string name="notification_workmates_joining">"Workmates coming with you :"</string>


    <!-- CHAT ACTIVITY-->
    <string name="chat_activity_text_view_chat_error">There are no messages&#8230;</string>
    <string name="chat_activity_text_view_input_title">Write your message</string>
    <string name="toast_title_no_image_chosen">No pictures chosen&#8230;</string>

    <!-- RESTAURANT ACTIVITY-->
    <string name="toolbar_title_restaurant_activity">Restaurant Detail</string>
    <string name="restaurant_nav_call">CALL</string>
    <string name="restaurant_nav_like">LIKE</string>
    <string name="restaurant_nav_website">WEBSITE</string>
    <string name="restaurant_like_action">"You add one like to this restaurant"</string>
    <string name="restaurant_no_website">"There is no website available."</string>
    <string name="restaurant_no_phone">"There is no phone number."</string>
    <string name="restaurant_already_chosen">"You already choose this restaurant."</string>
    <string name="restaurant_chosen">"You have chosen this restaurant as your lunch."</string>
    <string name="workmate_joining">" is joining."</string>
    <string name="diag_like">"You already like this restaurant. Do you want to delete the like ?"</string>
    <string name="restaurant_open_hours">Opening hours :</string>

    <!-- PERMISSION -->
    <string name="popup_title_permission_phone_access">This application needs your permission to access to your phone to work properly.</string>
    <string name="popup_title_permission_files_access">This application needs your permission to work correctly.</string>
    <string name="popup_title_permission_location_access">This application needs your location. Do you accept ?</string>
    <string name="location_access_denied">Location Access denied, please accept it.</string>

</resources>
