<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.SettingActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/activity_setting_language_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_setting_language_txt"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:text="@string/settings_language"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/activity_setting_language_fr_rbtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/settings_language_french"/>

            <RadioButton
                android:id="@+id/activity_setting_language_en_rbtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/settings_language_english"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:id="@+id/activity_notification_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Switch
            android:id="@+id/activity_notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_notification"
            android:paddingStart="5dp"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>