<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.SettingProfileActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/activity_setting_language_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_setting_language_txt"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:text="@string/settings_language"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/activity_setting_radio_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/activity_setting_language_fr_rbtn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/settings_language_french"/>

                <RadioButton
                    android:id="@+id/activity_setting_language_en_rbtn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/settings_language_english"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/activity_setting_view"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:id="@+id/activity_setting_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Switch
            android:id="@+id/activity_setting_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_notification"
            android:paddingStart="5dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_profile_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/activity_profile_image_imv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"/>

        <!-- PROGRESS BAR -->
        <ProgressBar
            android:id="@+id/activity_profile_progress_bar"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:visibility="invisible"
            android:layout_above="@id/activity_profile_edit_floating_btn"
            android:layout_toEndOf="@+id/activity_profile_username_edt"/>

        <EditText
            android:id="@+id/activity_profile_username_edt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_profile_image_imv"
            android:paddingTop="70dp"
            android:textSize="16sp"
            style="@style/EditText"/>

        <TextView
            android:id="@+id/activity_profile_delete_txt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_profile_username_edt"
            android:padding="16dp"
            android:text="@string/profile_delete_account"
            android:textSize="16sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_profile_edit_floating_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/activity_profile_delete_txt"
            android:layout_alignParentStart="@+id/activity_profile_username_edt"
            android:layout_toEndOf="@+id/activity_profile_username_edt"
            app:backgroundTint="@color/colorLight"
            android:src="@drawable/edit_ico" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_profile_delete_floating_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_profile_username_edt"
            android:layout_toEndOf="@+id/activity_profile_delete_txt"
            android:layout_centerInParent="@+id/activity_profile_delete_txt"
            app:backgroundTint="@color/colorError"
            android:src="@drawable/delete_ico"/>


    </RelativeLayout>


</LinearLayout>