<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.duboscq.nicolas.go4lunch.controllers.activities.ChatActivity">

    <!-- Toolbar -->
    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- IMAGE CHOSEN PREVIEW -->

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/activity_chat_add_message_container"
        android:layout_below="@id/toolbar">

    <!-- MESSAGE RECYCLER VIEW EMPTY -->
    <TextView
        android:id="@+id/activity_chat_text_view_recycler_view_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_activity_text_view_chat_error"
        android:textAlignment="center"
        android:layout_margin="@dimen/default_large_margin"/>

    <!-- RECYCLER VIEW -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>


    <ImageView
        android:id="@+id/activity_chat_image_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_margin="@dimen/default_margin"
        android:layout_above="@id/activity_chat_add_message_container"
        android:contentDescription="@string/auth_imv_content_desc"/>


    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/activity_chat_add_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/add_image_ic"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:contentDescription="@string/auth_imv_content_desc"
            android:tint="@color/colorPrimary"/>

        <!-- TEXT MESSAGE EDIT TEXT -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:backgroundTint="@color/colorGrey"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/chat_activity_text_view_input_title"/>

        <!-- ADD MESSAGE BUTTON -->
        <ImageView
            android:id="@+id/activity_chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/send_ic"
            android:text="@string/button_title_mentor_chat_activity"
            android:tint="@color/colorPrimary"/>

    </LinearLayout>


</RelativeLayout>