<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.activities.RestaurantActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/activity_restaurant_image_imv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/activity_restaurant_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/activity_restaurant_image_imv"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_restaurant_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/activity_restaurant_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/WhiteColor"
                android:maxWidth="200dp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/activity_restaurant_one_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_border_ico"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/activity_restaurant_two_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_border_ico"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/activity_restaurant_three_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_border_ico"
                android:layout_gravity="center"/>

        </LinearLayout>


        <TextView
            android:id="@+id/activity_restaurant_adress_txt"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/WhiteColor"
            android:paddingStart="10dp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_restaurant_action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_restaurant_detail_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_restaurant_call_btn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/restaurant_nav_call"
            android:drawableTop="@drawable/call_ic"
            style="@style/Button_detail_restaurant" />

        <Button
            android:id="@+id/activity_restaurant_like_btn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/star_full_ic"
            android:text="@string/restaurant_nav_like"
            style="@style/Button_detail_restaurant"/>

        <Button
            android:id="@+id/activity_restaurant_website_btn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/website_ic"
            android:text="@string/restaurant_nav_website"
            style="@style/Button_detail_restaurant"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_restaurant_selection_floating_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/activity_restaurant_detail_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/check_circle_ic"
        app:backgroundTint="@color/WhiteColor" />

</RelativeLayout>